# spotify_in_russia

./: .gitignore  .travis.yml  CODEOWNERS  Cargo.toml  Dockerfile  README.md  config.example.toml  config.toml
.github/workflows/: docker-publish.yml
src/: lib.rs  main.rs
src/available/: mod.rs
src/config/: mod.rs
src/giphy/: mod.rs
src/mdz/: mod.rs
src/tgm/: mod.rs
