[package]
name = "spotify_in_russia"
version = "0.3.1"
authors = ["b3cat"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
toml = "0.5.5"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
simple_logger = "1.3.0"
rand = "0.7.2"
clokwerk = "0.4.0-rc1"
chrono = "0.4"
lazy_static = "1.4.0"
structopt = "0.3.15"

